--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,28 +1,28 @@
 <div class="container">
-  <div class="row col-6 col-md-4 ">
+  <div class="row col-6 col-md-4 form-style ">
     <form>
       <div class="form-group">
-        <label for="formGroupExampleInput">Task</label>
+        <!-- <label for="formGroupExampleInput">Task</label> -->
         <input type="text" class="form-control" [(ngModel)]='task.taskName' name='atask1' id="formGroupExampleInput" placeholder="Task Title">
       </div>
       <div class="form-group">
         <label for="formControlRange">Priority</label>
-        <input type="range" class="form-control-range" [(ngModel)]='task.priority'  name='atask2' id="formControlRange">
+        <input type="range" class="custom-range" [(ngModel)]='task.priority'  name='atask2' id="formControlRange">
       </div>
       <div class="form-group">
-        <label for="formGroupExampleInput">Parent Task</label>
+        <!-- <label for="formGroupExampleInput">Parent Task</label> -->
         <input type="text" class="form-control" [(ngModel)]='task.parentTaskName'  name='atask3' id="formGroupExampleInput" placeholder="Parent Task">
       </div>
       <div class="form-group">
-        <label for="formGroupExampleInput">Start Date</label>
+        <!-- <label for="formGroupExampleInput">Start Date</label> -->
         <input type="date" class="form-control" [(ngModel)]='task.startDate'  name='atask4' id="formGroupExampleInput">
       </div>
       <div class="form-group">
-        <label for="formGroupExampleInput">End Date</label>
+        <!-- <label for="formGroupExampleInput">End Date</label> -->
         <input type="date" class="form-control" [(ngModel)]='task.endDate'  name='atask5' id="formGroupExampleInput">
       </div>
-      <button type="submit" class="btn btn-info" style="margin-right:20px" (click)="addTask()">Add Task</button>
-      <button type="submit" class="btn btn-info" (click)="resetTask()" >Reset</button>
+      <button type="submit" class="btn btn-info btn-sm" style="margin-right:20px" (click)="addTask()">Add Task</button>
+      <button type="submit" class="btn btn-info btn-sm" (click)="resetTask()" >Reset</button>
     </form>
   </div>
 </div>
