--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 </div>
 <!-- <hr> -->
 <div class="container">
-  <button type="button" class="btn btn-outline-info add" style="margin-right:20px;" (click)="toggle()">Add Task</button>
-  <button type="button" class="btn btn-outline-info">View Task</button>
+  <button type="button" class="btn btn-outline-info btn-sm add" style="margin:10px 30px 0px 0px;" (click)="toggle()">Add Task</button>
+  <button type="button" class="btn btn-outline-info btn-sm" style="margin-top:10px">View Task</button>
 </div>
 <ng-container *ngIf="show">
   <app-add-task></app-add-task>
