--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row col-6 col-md-4 form-style ">
+  <div class="row col-6 col-md-4" style="padding-top:20px">
     <form>
       <div class="form-group">
         <!-- <label for="formGroupExampleInput">Task</label> -->
