--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,21 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
+<div>
+  <h1 style="font-family: 'Poiret One', cursive;padding-left:30px;">
+    {{ title }}
   </h1>
 </div>
 <!-- <hr> -->
 <div class="container">
-  <button type="button" class="btn btn-outline-info btn-sm add" style="margin:10px 30px 0px 0px;" (click)="toggle()">Add Task</button>
-  <button type="button" class="btn btn-outline-info btn-sm" style="margin-top:10px">View Task</button>
+  <!-- <button type="button" class="btn btn-outline-info btn-sm add" style="margin:10px 30px 0px 0px;" (click)="toggle()">Add Task</button>
+  <button type="button" class="btn btn-outline-info btn-sm" style="margin-top:10px">View Task</button> -->
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#" (click)="toggle()">Add Task</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="#">View Task</a>
+    </li>
+  </ul>
 </div>
 <ng-container *ngIf="show">
   <app-add-task></app-add-task>
