--- a/src/app/view-task/view-task.component.html
+++ b/src/app/view-task/view-task.component.html
@@ -53,7 +53,7 @@
       <td>{{viewTask.startDate | date : 'shortDate'}}</td>
       <td>{{viewTask.endDate | date : 'shortDate'}}</td>
       <td><button class="btn btn-outline-info btn-sm" (click)="pushToEdit(viewTask)">{{edit}}</button></td>
-      <td><button class="btn btn-outline-info btn-sm" (click)="endTask(viewTask)">End Task</button></td>      
+      <td><button class="btn btn-outline-info btn-sm" (click)="endTask(viewTask)">End</button></td>      
     </tr>
   </tbody>
 </table>
