--- a/src/app/edittask/edittask.component.html
+++ b/src/app/edittask/edittask.component.html
@@ -1,5 +1,6 @@
 <div class="container" style="margin-bottom:20px"> 
   <div class="row col-6 col-md-4" style="padding-top:20px">
+    <div class="alert alert-danger" *ngIf="errorDisplay">{{errorData}}</div>
     <form>
       <div class="form-group">
         <label for="formGroupExampleInput">Task</label>
