--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -58,5 +58,6 @@
       <button type="submit" class="btn btn-info btn-sm" (click)="resetTask()">Reset</button>
     </form>
   </div>
-</div>
-</ng-container>
+</div></ng-container>
+
+
