--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -72,27 +72,29 @@
     <hr>
   </div>
 
-  <div *ngFor="let user of filtered_users_list">
-    <div class="row" id="users-list">
-      <div class="col-md-7 ">
-        <ul class="list-group">
-          <li class="list-group-item">First Name: {{user.firstName | titlecase}}</li>
-          <li class="list-group-item">Last Name: {{user.lastName | titlecase}}</li>
-          <li class="list-group-item">Employee id: {{user.employeeId}}</li>
-        </ul>
-      </div>
-      <div class="col-md-1 ">
-        <button type="button" class="btn btn-info" id="edit-btn" (click)="onEdit(user)"
-          [disabled]="editable && user._id == edit_id">Edit</button>
-        <br>
-        <br>
-        <button type="button" class="btn btn-info" id="delete-btn" (click)="onDelete(user._id)"
-          [disabled]="editable && user._id == edit_id">Delete</button>
-      </div>
+<div *ngFor="let user of filtered_users_list">
+  <div class="row" id="users-list">
+    <div class="col-md-7 ">
+      <ul class="list-group">
+        <li class="list-group-item">First Name: {{user.firstName | titlecase}}</li>
+        <li class="list-group-item">Last Name: {{user.lastName | titlecase}}</li>
+        <li class="list-group-item">Employee id: {{user.employeeId}}</li>
+      </ul>
     </div>
-    <div>
-      <hr>
+    <div class="col-md-1 ">
+      <button type="button" class="btn btn-secondary" id="edit-btn" (click)="onEdit(user.userId)"
+        [disabled]="editable && user.userId == edit_id">Edit</button>
+      <br>
+      <br>
+      <button type="button" class="btn btn-secondary" id="delete-btn" (click)="onDelete(user)"
+        [disabled]="editable && user.userId == edit_id">Delete</button>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-8 ">
+      <hr class="ruler">
+    </div>
+  </div>
+</div>
 </div>
 </div>
