--- a/src/app/view-task/view-task.component.css
+++ b/src/app/view-task/view-task.component.css
@@ -1,32 +1,20 @@
-/* .form-style {
-    font-family: 'Open Sans Condensed', arial, sans;
-    align-content: flex-start;
-	width: 100%;
-    padding: 10px;
-	background: #FFFFFF;
-	margin-top: 15px;
-	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.22);
-	-moz-box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.22);
-	-webkit-box-shadow:  0px 0px 1px rgba(0, 0, 0, 0.22);
-} */
 .form-control {
-    box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    /* border: none;
-    border-bottom: rgba(19, 22, 19, 0.582); */
-	box-shadow: 1px 1px 4px #EBEBEB;
-	-moz-box-shadow: 1px 1px 4px #EBEBEB;
-	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
-	border-radius: 0px;
-	-webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-color: teal;
+    width: 100%;
 	padding: 7px;
-    outline: none;
-    font-size: 12px;
-    height: 30px;
+	border: none;
+	border-bottom: 1px solid rgb(37, 120, 214);
+	background: transparent;
+    margin-bottom: 5px;
+    font: 16px Arial, Helvetica, sans-serif;
+    font-size: 15px;
+	height: 30px;
 }
+.modal-header{
+	font-family: 'Molengo', Georgia, Times, serif;
+	background-color: cadetblue;
+	color: white;
+}
+
 label {
     font-family: 'Poiret One', cursive;
     font-weight: 800;
